<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/thinking_man1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_small">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/textColorDark"
        android:textSize="@dimen/large" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@drawable/username"
        android:fontFamily="sans-serif"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="@dimen/margin_small"
        android:textStyle="italic" />

    <Button
        android:id="@+id/play"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:fontFamily="@font/kaushan_script"
        android:text="@string/play"
        android:textSize="@dimen/medium"
        android:textStyle="bold" />

</LinearLayout>